--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ paginate: 10 # amount of posts to show
 paginate_path: /page:num/
 timezone: DE # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 locale: "de"
+date_format: "%-d. %B %Y"
 
 include:
   - _pages
@@ -98,6 +99,7 @@ defaults:
       comments: true
       share: true
       related: true
+      show_date: true
   # _pages
   - scope:
       path: "_pages"
