--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ defaults:
       layout: single
       author_profile: false
       read_time: false
-      comments: true
+      comments: false
       share: true
       related: true
       show_date: true
