--- a/_config.yml
+++ b/_config.yml
@@ -110,6 +110,8 @@ defaults:
     values:
       layout: single
       author_profile: true
+      header:
+        image: /assets/images/logo2.jpg
 
 category_archive:
   type: liquid
