einige Wettkampfdaten als Beispiel

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ remote_theme: mmistakes/minimal-mistakes
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to showon start page
 paginate_path: /page:num/
-timezone: DE # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Europe/Berlin # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 locale: "de"
 date_format: "%-d. %B %Y"
 
