--- a/_config.yml
+++ b/_config.yml
@@ -63,21 +63,21 @@ author:
   avatar : "/assets/images/logo_klein.jpg"
   bio    : "Webseite des Ohrdrufer LV"
   links:
-    - label: "Trainingsinformationen"
-      icon: "fas fa-fw fa-link"
-      url: "/training/"
+#    - label: "Trainingsinformationen"
+#      icon: "fas fa-fw fa-link"
+#      url: "/training/"
     - label: "Infos zu Corona"
       icon: "fas fa-fw fa-link"
       url: "/intern/"
 #    - label: "Twitter"
 #      icon: "fab fa-fw fa-twitter-square"
 #      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/ecki-olv/olv-demo"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+#    - label: "GitHub"
+#      icon: "fab fa-fw fa-github"
+#      url: "https://github.com/ecki-olv/olv-demo"
+#    - label: "Instagram"
+#      icon: "fab fa-fw fa-instagram"
+#      url: "https://instagram.com/"
     - label: "Stadt Ohrdruf"
       icon: "fab fa-fw fa-angles-right"
       url: "https://www.ohrdruf.de/"
