--- a/_config.yml
+++ b/_config.yml
@@ -78,15 +78,15 @@ author:
 #    - label: "Instagram"
 #      icon: "fab fa-fw fa-instagram"
 #      url: "https://instagram.com/"
-    - label: "Stadt Ohrdruf"
-      icon: "fab fa-fw fa-angles-right"
-      url: "https://www.ohrdruf.de/"
-    - label: "Thüringer LV"
-      icon: "fab fa-fw fa-arrow-right"
-      url: "https://www.tlv-sport.de/"
-    - label: "leichtathletik.de"
-      icon: "fab fa-fw fa-arrow-right"
-      url: "https://www.leichtathletik.de/"
+#    - label: "Stadt Ohrdruf"
+#      icon: "fab fa-fw fa-angles-right"
+#      url: "https://www.ohrdruf.de/"
+#    - label: "Thüringer LV"
+#      icon: "fab fa-fw fa-arrow-right"
+#      url: "https://www.tlv-sport.de/"
+#    - label: "leichtathletik.de"
+#      icon: "fab fa-fw fa-arrow-right"
+#      url: "https://www.leichtathletik.de/"
 
 footer:
   links:
