--- a/_data/wettkaempfe.yml
+++ b/_data/wettkaempfe.yml
@@ -7,7 +7,7 @@
   info: Start und Ziel an den Sportstätten am Goldberg Ohrdruf
   dateien:
   - text: Ausschreibung
-    pfad: "../assets/wettkaempfe/2022/202204/Osterferienspaziergang_OLV-NEU_23.04.2022.pdf"
+    pfad: "/wettkaempfe/2022/202204/Osterferienspaziergang_OLV-NEU_23.04.2022.pdf"
 
 - name: Stunden-, Halbstunden-, Viertelstundenlauf des Ohrdrufer LV - 1. Challenge
   datum: 2022-04-27
@@ -21,6 +21,6 @@
     ab 10:00
   dateien:
   - text: "Informationsblatt"
-    pfad: "wettkaempfe/2022/20220507/2022_05_07_Fr%C3%BChjahrssportfest_Infoblatt.pdf"
-  - pfad: wettkaempfe/2022/20220507/Fr%C3%BChjahrssportfest_2022_05_07_ZEITPLAN_Stand_30.04.2022.pdf
+    pfad: "/wettkaempfe/2022/20220507/2022_05_07_Fr%C3%BChjahrssportfest_Infoblatt.pdf"
+  - pfad: "/wettkaempfe/2022/20220507/Fr%C3%BChjahrssportfest_2022_05_07_ZEITPLAN_Stand_30.04.2022.pdf"
     text: Zeitplan - Stand 30.04.2022
